# covid-by-county

./: .coveragerc  .gitignore  README.md  main.py  pyproject.toml
covid-by-county/: main.py
covid_by_county/: config.py  create_figure.py  create_figures.py  data_handler.py  file_handler.py  main.py  validate_data.py
reference_files/: all-geocodes-v2018.csv
scripts/: convert_xlsx_to_csv.py
tests/unit/: conftest.py  pytest.ini  test_data_handler.py  test_file_handler.py
tests/unit/fixtures/: 03-30-2020_lists.txt  data_handler_data.py  file_handler_data.py
