[tool.poetry]
name = "covid-by-county"
version = "0.1.0"
description = "Covid By Country produces maps of the United States color-coded by number of confirmed covid-19 cases."
authors = [
    "Kurt Klein <kurt.a.klein@gmail.com>"
]

readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
beautifulsoup4 = "^4.8.2"
wget = "^3.2"
numpy = "^1.18.2"
pandas = "^1.0.3"
xlrd = "^1.2.0"
plotly = "^4.6.0"
plotly-geo = "^1.0.0"
geopandas = "^0.7.0"
pyshp = "^2.1.0"
shapely = "^1.7.0"
psutil = "^5.7.0"
watchdog = "^0.10.2"
aiohttp = "^3.6.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"
pytest-asyncio = "^0.14.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
